test/visibility/import/public/no-imm-import.good
no-imm-import.chpl:2: error: 'import' statements must refer to module symbols
